experiment: validate Lombok across JDT candidates